--- a/backend/apps/logus/templates/logus/main_screen.html
+++ b/backend/apps/logus/templates/logus/main_screen.html
@@ -153,72 +153,52 @@
     <!-- Content Wrapper. Contains page content -->
     <div class="content-wrapper">
         <!-- Content Header (Page header) -->
-        <section class="content-header">
-            <div class="container-fluid">
-                <div class="row mb-2">
-                    <div class="col-sm-6">
-                        <h1>Advanced Form</h1>
-                    </div>
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">Advanced Form</li>
-                        </ol>
-                    </div>
-                </div>
-            </div><!-- /.container-fluid -->
-        </section>
-
+        <br>
         <!-- Main content -->
         <section class="content">
             <div class="container-fluid">
                 <!-- SELECT2 EXAMPLE -->
-                <div class="card card-primary">
+                <div class="card card-success">
                     <div class="card-header">
                         <h3 class="card-title">Мастер бронирования</h3>
                     </div>
-                    <form action="{% url 'logus_registration:main_screen' %}" enctype="multipart/form-data" method="post" id="product_form">
-                    {% csrf_token %}
+                    <form action="{% url 'logus_registration:main_screen' %}" enctype="multipart/form-data"
+                          method="post" id="product_form">
+                        {% csrf_token %}
                         <!-- /.card-header -->
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                            <label>Диапазон дат:</label>
+                                        <label>Диапазон дат:</label>
 
-                                            <div class="input-group">
-                                                <div class="input-group-prepend">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
                                                   <span class="input-group-text">
                                                     <i class="far fa-calendar-alt"></i>
                                                   </span>
-                                                </div>
-                                                <input name="reservation_time" type="text" class="form-control float-right" id="reservation">
                                             </div>
-                                            <!-- /.input group -->
+                                            <input name="reservation_time" type="text" class="form-control float-right"
+                                                   id="reservation">
                                         </div>
-                                    <!-- /.form-group -->
-                                    <div class="form-group">
-                                        <label>Тип комнаты</label>
-                                        <select name="room_type" class="select_room_type" data-placeholder="Тип комнаты"
-                                                style="width: 100%;">
-                                            {% for room_type in room_types %}
-                                                <option name="room_type" value="{{ room_type.id }}">{{ room_type.name }}</option>
-                                            {% endfor %}
-                                        </select>
+                                        <!-- /.input group -->
                                     </div>
                                     <!-- /.form-group -->
                                 </div>
+
                                 <!-- /.col -->
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <label>Тарифы</label>
-                                        <select name="tariff" class="form-control select_tariff" style="width: 100%;">
-                                            {% for tariff in tariffs %}
-                                                <option name="tariff" value="{{ tariff.id }}">{{ tariff }}</option>
+                                        <label>Тип комнаты</label>
+                                        <select name="room_type" class="form-control select_room_type" style="width: 100%;">
+                                            {% for room_type in room_types %}
+                                                <option name="room_type"
+                                                        value="{{ room_type.id }}">{{ room_type.name }}</option>
                                             {% endfor %}
                                         </select>
                                     </div>
                                 </div>
+
                                 <!-- /.col -->
                             </div>
                             <!-- /.row -->
@@ -227,6 +207,55 @@
                     </form>
                 </div>
                 <!-- /.card -->
+            {% if rooms %}
+            	<div class="card card-primary">
+                    <div class="card-header">
+                        <h3 class="card-title"></h3>
+                    </div>
+                        <!-- /.card-header -->
+                        <div class="card-body">
+
+                            <div class="card-body table-responsive p-0">
+                                <table class="table table-hover text-nowrap" id="room-table">
+                                    <thead>
+                                    <tr>
+                                        <th>Комната</th>
+                                        <th>Дата выезда</th>
+                                        <th>Дата заезда</th>
+                                        <th>Пол</th>
+                                        <th>Возраст</th>
+                                        <th>Этаж</th>
+                                        <th>Статус уборки</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+
+                                    {% for room in rooms %}
+                                        <tr data-room-id="{{ room.id }}">
+                                            <td>{{ room.room_number }}  <span class="badge bg-yellow">{{ room.capacity }}</span></td>
+                                            <td>11-7-2014</td>
+                                            <td></td>
+                                            <td><span class="badge bg-danger">Ж</span></td>
+                                            <td>70</td>
+                                            <td>{{ room.floor }}</td>
+                                            <td><span class="badge bg-danger">грязный</span></td>
+                                        </tr>
+                                    {% endfor %}
+
+
+                                    </tbody>
+                                </table>
+                            </div>
+                            <br>
+                            <form id="room-form" method="POST" action="{% url 'logus_registration:test' %}">
+                                {% csrf_token %}
+                                <input type="hidden" name="room_id" id="selected-room-id">
+                                <button type="submit" id="submit-button" class="btn btn-primary" disabled>Submit</button>
+                            </form>
+
+                        </div>
+                </div>
+            {% endif %}
 
             </div>
             <!-- /.container-fluid -->
@@ -261,6 +290,33 @@
 <script src="{% static 'adminlte3_assets/plugins/dropzone/min/dropzone.min.js' %}"></script>
 <script src="{% static 'adminlte3_assets/dist/js/adminlte.min.js' %}"></script>
 <!-- Page specific script -->
+<script type="text/javascript">
+    $(document).ready(function() {
+        // Attach a click event listener to table rows
+        $('#room-table').on('click', 'tr', function() {
+            // Remove 'selected' class from any previously selected row
+            $('#room-table tr').removeClass('selected');
+
+            // Add 'selected' class to the clicked row
+            $(this).addClass('selected');
+
+            // Get the room ID from the data attribute
+            var roomId = $(this).data('room-id');
+
+            // Set the value of the hidden input field
+            $('#selected-room-id').val(roomId);
+
+            // Enable the submit button
+            $('#submit-button').prop('disabled', false);
+        });
+
+        // Optionally, you can add some visual feedback for the selected row
+        $('#room-table').on('dblclick', 'tr', function() {
+            $(this).toggleClass('highlight');
+        });
+    });
+</script>
+
 <script>
     $(function () {
         //Initialize Select2 Elements
