--- a/backend/apps/logus/templates/logus/snippets/navbar.html
+++ b/backend/apps/logus/templates/logus/snippets/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="main-header navbar navbar-expand-md navbar-light navbar-white">
     <div class="container">
-        <a href="{% url "warehouse_v2:mainscreen" %}" class="navbar-brand">
+        <a href="{% url "logus_registration:main_screen" %}" class="navbar-brand">
             <img src="{% static 'adminlte3_assets/dist/img/hayat_logo.png' %}" alt="AdminLTE Logo"
                  class="brand-image img" style="opacity: .8">
             <span class="brand-text font-weight-light"></span>
@@ -17,7 +17,7 @@
             <!-- Left navbar links -->
             <ul class="navbar-nav">
 
-                <li class="nav-item">
+                <li class="nav-item bg-primary">
                     <a href="#" class="nav-link">Ожидаемый заезд</a>
                 </li>
                 <li class="nav-item">
